--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,17 +1,17 @@
 plugins {
     id 'com.android.application'
-    id 'org.jetbrains.kotlin.android'
+    id 'kotlin-android'
 }
 
 android {
-    compileSdk 32
+    compileSdk Sdk.compile
 
     defaultConfig {
-        applicationId "com.adematici.multimoduleprojectsample"
-        minSdk 21
-        targetSdk 32
+        applicationId "com.firatuni.boymetre"
+        minSdk Sdk.min
+        targetSdk Sdk.target
         versionCode 1
-        versionName "1.0"
+        versionName "1.0.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
@@ -21,7 +21,8 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -30,13 +31,14 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = Jvm.target
     }
     buildFeatures {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion compose_version
+        kotlinCompilerExtensionVersion Kotlin.compilerExtension
+        kotlinCompilerVersion Kotlin.compiler
     }
     packagingOptions {
         resources {
@@ -47,16 +49,24 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation "androidx.compose.ui:ui:$compose_version"
-    implementation "androidx.compose.material:material:$compose_version"
-    implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
-    implementation 'androidx.activity:activity-compose:1.3.1'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
-    debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
-    debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
+    // AndroidX
+    implementation "androidx.core:core-ktx:${AndroidX.core}"
+    implementation "androidx.compose.ui:ui:${Compose.composeAlpha}"
+    implementation "androidx.appcompat:appcompat:${AndroidX.appcompat}"
+    implementation "androidx.compose.material:material:${Compose.composeAlpha}"
+    implementation "androidx.compose.ui:ui-tooling-preview:${Compose.composeVersion}"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:${AndroidX.lifecycle}"
+    implementation "androidx.activity:activity-compose:${AndroidX.activityCompose}"
+
+    // Google
+    implementation "com.google.android.material:material:${Google.material}"
+
+    // Testing
+    testImplementation "junit:junit:${Testing.junit}"
+    androidTestImplementation "androidx.test.ext:junit:${Testing.junitExt}"
+    androidTestImplementation "androidx.test.espresso:espresso-core:${Testing.espresso}"
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:${Compose.composeVersion}"
+    debugImplementation "androidx.compose.ui:ui-tooling:${Compose.composeVersion}"
+    debugImplementation "androidx.compose.ui:ui-test-manifest:${Compose.composeVersion}"
+
 }
