--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,15 @@
 buildscript {
-    ext {
-        compose_version = '1.1.0-beta01'
+    repositories {
+        google()
+        mavenCentral()
     }
-}// Top-level build file where you can add configuration options common to all sub-projects/modules.
-plugins {
-    id 'com.android.application' version '7.2.1' apply false
-    id 'com.android.library' version '7.2.1' apply false
-    id 'org.jetbrains.kotlin.android' version '1.5.31' apply false
+    dependencies {
+        classpath "com.android.tools.build:gradle:${BuildTools.gradle}"
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.21'
+        // NOTE: Do not place your application dependencies here; they belong
+        // in the individual module build.gradle files
+    }
 }
-
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
