Update default app id

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     compileSdk Sdk.compile
 
     defaultConfig {
-        applicationId "com.firatuni.boymetre"
+        applicationId "com.adematici.multimoduleprojectsample"
         minSdk Sdk.min
         targetSdk Sdk.target
         versionCode 1
