--- a/settings.gradle
+++ b/settings.gradle
@@ -15,3 +15,4 @@ dependencyResolutionManagement {
 rootProject.name = "MultiModuleProjectSample"
 include ':app'
 include ':data'
+include ':domain'
